--- a/Lab_2_Converter/CMakeLists.txt
+++ b/Lab_2_Converter/CMakeLists.txt
@@ -22,6 +22,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Lab_2_Converter
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+
+        img/img.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Lab_2_Converter APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
